<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/txt_NombreR2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_name2"
        android:textAlignment="center"
        android:textColor="@color/purple_200"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="295dp"
        android:layout_height="246dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_EdadR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Calcu_Edad"
        android:textAlignment="center"
        android:textColor="@color/purple_200"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_NombreUsuario"
        app:layout_constraintVertical_bias="0.428" />

    <TextView
        android:id="@+id/txt_Datos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/bryndanwrite"
        android:text="@string/Registro"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_NombreR"
        android:layout_width="217dp"
        android:layout_height="30dp"
        android:text="@string/Zodiaco"
        android:textAlignment="textStart"
        android:textColor="@color/purple_200"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.596" />

    <TextView
        android:id="@+id/txt_NombreUsuario"
        android:layout_width="326dp"
        android:layout_height="26dp"
        android:fontFamily="@font/trek"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16" />

    <TextView
        android:id="@+id/txt_FechaR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Fecha"
        android:textAlignment="center"
        android:textColor="@color/purple_200"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_NombreUsuario"
        app:layout_constraintVertical_bias="0.021" />

    <TextView
        android:id="@+id/txt_AñoUsuario"
        android:layout_width="94dp"
        android:layout_height="28dp"
        android:fontFamily="@font/trek"
        android:textAlignment="textStart"
        android:textColor="@color/teal_200"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.735"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_FechaR"
        app:layout_constraintVertical_bias="0.015" />

    <TextView
        android:id="@+id/txt_FechaUsuario"
        android:layout_width="94dp"
        android:layout_height="28dp"
        android:fontFamily="@font/trek"
        android:textAlignment="textEnd"
        android:textColor="@color/teal_200"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_FechaR"
        app:layout_constraintVertical_bias="0.015" />

    <TextView
        android:id="@+id/txt_NumR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Num"
        android:textAlignment="center"
        android:textColor="@color/purple_200"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_NombreUsuario"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/txt_NumUsuario"
        android:layout_width="322dp"
        android:layout_height="27dp"
        android:fontFamily="@font/trek"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_FechaR"
        app:layout_constraintVertical_bias="0.165" />

    <TextView
        android:id="@+id/txt_CorreoR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Correo"
        android:textAlignment="center"
        android:textColor="@color/purple_200"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_NombreUsuario"
        app:layout_constraintVertical_bias="0.288" />

    <TextView
        android:id="@+id/txt_CorreoUsuario"
        android:layout_width="322dp"
        android:layout_height="27dp"
        android:fontFamily="@font/trek"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_FechaR"
        app:layout_constraintVertical_bias="0.313" />

    <TextView
        android:id="@+id/txt_EdadUsuario"
        android:layout_width="120dp"
        android:layout_height="29dp"
        android:fontFamily="@font/trek"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_FechaR"
        app:layout_constraintVertical_bias="0.388" />

</androidx.constraintlayout.widget.ConstraintLayout>